checker/tests/parsing/errors/fn_missing_returns.mft
fn f {
  operand X;
}
=== error ===
Unrecognized token `}` found at 20:21
Expected one of "options" or "returns"